# MyFirstSlicerExtension

./: CMakeLists.txt  CMakeLists.txt~
LineIntensityProfile/: LineIntensityProfile.py  LineIntensityProfile.py~
